Documentation edits made through Mintlify web editor

--- a/vps-management/vps-control-panel.mdx
+++ b/vps-management/vps-control-panel.mdx
@@ -83,5 +83,5 @@ while a quick-action column on the left keeps power and console controls only on
 - **⭐ Upgrades** – order add-on IPv4 addresses, RAM/CPU boosts, or full plan upgrades directly—no need to message Support.
 
 <Info>
-  Bookmark the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB VPS Portal</a>. After signing in, open the top-right <strong>Account</strong> menu, choose <strong>Security Settings</strong>, and switch on multi-factor authentication to lock down access.
+  Bookmark the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB Control Panel</a>. After signing in, open the top-right <strong>Account</strong> menu, choose <strong>Security Settings</strong>, and switch on multi-factor authentication to lock down access.
 </Info>
