Documentation edits made through Mintlify web editor

--- a/vps-management/power-cycle-or-reboot-a-vps.mdx
+++ b/vps-management/power-cycle-or-reboot-a-vps.mdx
@@ -11,7 +11,7 @@ description: "Control VPS power states from the EDBB portal—restart, stop, or 
 ## Restart a Running VPS
 
 <Steps>
-  <Step title="Open the VPS dashboard">
+  <Step title="Open the VPS Control Panel">
     Sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB Control Panel</a>, go to <strong>Services</strong>, and select the VPS you want to reboot.
   </Step>
   <Step title="Choose Restart">
