Documentation edits made through Mintlify web editor

--- a/vps-management/reset-root-password-linux.mdx
+++ b/vps-management/reset-root-password-linux.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Set New Linux Root Password on your EDBB VPS"
-sidebarTitle: "Reset Root Password"
+sidebarTitle: "Reset Linux Password"
 description: "Use the EDBB password-helper ISO to reset your Linux root password"
 ---
 
