Documentation edits made through Mintlify web editor

--- a/faq/billing-lifecycle/automated-vps-billing-workflow.mdx
+++ b/faq/billing-lifecycle/automated-vps-billing-workflow.mdx
@@ -1,6 +1,6 @@
 ---
 title: "VPS Billing Workflow"
-description: "The document outlines the automated billing procedure for EDIS Global VPS services, including invoice generation, credit card captures, friendly and overdue reminders, service suspension, termination and data deletion."
+description: "The document outlines the automated billing procedure for EDBB VPS services, including invoice generation, credit card captures, friendly and overdue reminders, service suspension, termination and data deletion."
 ---
 
 ## Simplified VPS Billing Workflow
