Documentation edits made through Mintlify web editor

--- a/windows-remote-desktop.mdx
+++ b/windows-remote-desktop.mdx
@@ -12,7 +12,7 @@ import { CtaButton } from "/snippets/cta-button.mdx";
   Remote Desktop Protocol (RDP) delivers full graphical control of your Windows VPS. Bring the server’s IPv4 address, the <code>Administrator</code> password you set in the portal, and a stable network connection.
 </Info>
 
-Need to deploy Windows first? Reinstall from the EDBB portal with the <a href="/vps-management/autoinstall-reinstall-install-vps-linux-windows">OS reinstall guide</a>.
+Need to deploy Windows first? Reinstall from the EDBB Control Panel with the <a href="/vps-management/autoinstall-reinstall-install-vps-linux-windows">OS reinstall guide</a>.
 
 ---
 
