Documentation edits made through Mintlify web editor

--- a/faq/traffic-bandwidth/traffic-stats-refill-explained.mdx
+++ b/faq/traffic-bandwidth/traffic-stats-refill-explained.mdx
@@ -26,7 +26,7 @@ description: "Review how EDBB meters VPS traffic, when traffic refills happen, a
 
 ![Cumulative traffic chart](/assets/cumulative_traffic.png)
 
-Email alerts land at 80%, 90%, and 100%, but the portal indicator is the quickest way to spot high usage.
+Email alerts land at 80%, 90%, and 100%, but the Control Panel indicator is the quickest way to spot high usage.
 
 ---
 
