Documentation edits made through Mintlify web editor

--- a/faq/what-is-a-virtual-private-server.mdx
+++ b/faq/what-is-a-virtual-private-server.mdx
@@ -30,7 +30,7 @@ import { CtaButton } from "/snippets/cta-button.mdx";
     Access the noVNC console, mount rescue ISOs, and recover even when SSH/RDP is offline.
   </Card>
   <Card title="📈 Easy Scaling">
-    Upgrade CPU, RAM, or storage from the portal without rebuilding from scratch.
+    Upgrade CPU, RAM, or storage from the Control Panel without rebuilding from scratch.
   </Card>
   <Card title="🛠️ Automation Ready">
     Use Cloud-Init, API hooks, or configuration management tools to deploy consistently.
