final vps control panel

--- a/advanced-setup-guides/extend-hard-drive-windows-guide.mdx
+++ b/advanced-setup-guides/extend-hard-drive-windows-guide.mdx
@@ -9,7 +9,7 @@ description: Learn how to extend or resize your hard drive in Windows using Serv
 Managing disk space effectively is a crucial task on Windows Server. The **File and Storage Services** feature in **Server Manager** provides an intuitive way to resize volumes, whether you need to expand or shrink a drive. This guide walks you through the process.
 
 <Note>
-NOTE: To fully apply your upgrade, first shut down your OS, power off the server from the portal, and then power it back on through the portal. This process ensures the system recognizes the updated drive specifications.
+NOTE: To fully apply your upgrade, first shut down your OS, power off the server from the Control Panel, and then power it back on through the Control Panel. This process ensures the system recognizes the updated drive specifications.
 
 Keep in mind, the additional space will remain unavailable until you resize your disk or partition. Reformatting is only necessary if you intend to create a new partition.
 
