--- a/changelog/product.mdx
+++ b/changelog/product.mdx
@@ -21,7 +21,7 @@ The result: a modern, transparent, and performance-focused VPS platform backed b
 - 🎉 **A new brand, a new company** — independent legal entity, established in 2023, trading since November 2025
 - 🌍 **Trusted infrastructure** — delivered through the EDBB backbone spanning multiple Tier III facilities worldwide
 - 💻 **Official website** — learn more at [www.edbb.com](https://www.edbb.com)
-- ⚙️ **Unified dashboard** — manage your VPS quickly and easily in the [EDBB VPS Portal](https://my.edbb.com)
+- ⚙️ **Unified dashboard** — manage your VPS quickly and easily in the [EDBB VPS Control Panel](https://my.edbb.com)
 - 📘 **Documentation hub** — step-by-step guides available at [docs.edbb.com](https://docs.edbb.com)
 
 #### Why It Matters
