--- a/faq/billing-lifecycle/accidental-renewal-convert-payment-to-credit.mdx
+++ b/faq/billing-lifecycle/accidental-renewal-convert-payment-to-credit.mdx
@@ -14,7 +14,7 @@ description: Learn how to cancel an auto-renewed service, provide the necessary 
 
 <Steps>
   <Step title="Cancel the renewed service">
-    In the portal, request cancellation (immediate) for the VPS that auto-renewed. This prevents additional billing.
+    In the Control Panel, request cancellation (immediate) for the VPS that auto-renewed. This prevents additional billing.
   </Step>
   <Step title="Collect the details">
     Note the invoice number, primary IPv4 (or KVM ID), and when the payment was made.
