--- a/faq/billing-lifecycle/add-contact-receive-invoices-different-email.mdx
+++ b/faq/billing-lifecycle/add-contact-receive-invoices-different-email.mdx
@@ -1,10 +1,10 @@
 ---
 title: "Send Invoices to a Different Email"
 sidebarTitle: "Invoice Recipients"
-description: "Add contacts in the EDBB portal so invoices and other notices go to additional email addresses." 
+description: "Add contacts in the EDBB Control Panel so invoices and other notices go to additional email addresses." 
 ---
 
-## Add Recipients in the Portal
+## Add Recipients in the Control Panel
 
 <Steps>
   <Step title="Open Contacts / Sub-Accounts">
