--- a/faq/billing-lifecycle/cancel-a-service.mdx
+++ b/faq/billing-lifecycle/cancel-a-service.mdx
@@ -38,7 +38,7 @@ Cacel your EDBB VPS directly in the control panel. Select **Request Cancellation
      .
   </Step>
   <Step title="Confirm the request">
-    Submit the form. The portal updates the service status and sends an email confirming your cancellation and the chosen cancellation option (immediate/expiry)
+    Submit the form. The Control Panel updates the service status and sends an email confirming your cancellation and the chosen cancellation option (immediate/expiry)
   </Step>
 </Steps>
 
