--- a/faq/billing-lifecycle/eu-vat-explained-if-and-how-much.mdx
+++ b/faq/billing-lifecycle/eu-vat-explained-if-and-how-much.mdx
@@ -20,4 +20,4 @@ description: "See when EDBB applies VAT to invoices based on customer location a
 - EU businesses that enter a valid VAT ID (reverse charge)  
 - Customers outside the EU or in VAT-exempt territories
 
-Invoices clearly show the rate applied or the reverse-charge note. Keep your company profile and VAT number up to date in the portal before ordering.
+Invoices clearly show the rate applied or the reverse-charge note. Keep your company profile and VAT number up to date in the Control Panel before ordering.
