--- a/faq/billing-lifecycle/how-fast-instant-delivery.mdx
+++ b/faq/billing-lifecycle/how-fast-instant-delivery.mdx
@@ -36,7 +36,7 @@ description: "EDBB provisions VPS orders within minutes after payment clears; in
     Linux templates usually finish within **5 minutes**; Windows images can take up to **15 minutes** as Sysprep completes.
   </Step>
   <Step title="Credentials Delivered">
-    As soon as first boot finishes, we email your console/SSH/RDP details and unlock the portal dashboard.
+    As soon as first boot finishes, we email your console/SSH/RDP details and unlock the Control Panel.
   </Step>
 </Steps>
 
