--- a/faq/billing-lifecycle/how-to-add-account-credit.mdx
+++ b/faq/billing-lifecycle/how-to-add-account-credit.mdx
@@ -10,7 +10,7 @@ description: Learn how to add funds to your account, apply credit to invoices, a
   Account credit is optional. It’s useful if you want renewals to auto-charge from a balance, prefer to pre-fund several invoices, or need coverage while traveling.
 </Info>
 
-## Top Up in the Portal
+## Top Up in the Control Panel
 
 <Steps>
   <Step title="Open the Add Funds page">
