--- a/faq/hourly-plans-available.mdx
+++ b/faq/hourly-plans-available.mdx
@@ -38,7 +38,7 @@ import { CtaButton } from "/snippets/cta-button.mdx";
 - Order the smallest plan, use it for as long as needed, then cancel before the next renewal.  
 - Take advantage of the 24-hour refund window to evaluate the platform risk-free.  
 - Use automation (Cloud-Init, Ansible, Terraform) to spin environments up and down quickly even though billing is monthly.  
-- Track costs per project by tagging VPSs and exporting invoices from the portal.
+- Track costs per project by tagging VPSs and exporting invoices from the Control Panel.
 
 Monthly pricing still unlocks EDBB’s global network, rescue tools, and support—without watching the clock.
 
