--- a/faq/ip-addresses/anycast-reverse-dns-nameserver-locations-vs-vps-location.mdx
+++ b/faq/ip-addresses/anycast-reverse-dns-nameserver-locations-vs-vps-location.mdx
@@ -27,4 +27,4 @@ This design keeps PTR lookups fast and resilient worldwide.
 ## Key Takeaway
 
 - Reverse DNS location ≠ VPS location.  
-- If you need to prove hosting location, provide the VPS IP itself or reference the EDBB portal, not the resolver’s PoP.
+- If you need to prove hosting location, provide the VPS IP itself or reference the EDBB Control Panel, not the resolver’s PoP.
