--- a/faq/ip-addresses/change-ip-address.mdx
+++ b/faq/ip-addresses/change-ip-address.mdx
@@ -22,7 +22,7 @@ Every new VPS includes a one-time IP change at no cost during the first 24 hours
     The summary card on the right lists <strong>Primary IPv4</strong> with copy and refresh icons. This is where the free swap is triggered.
   </Step>
   <Step title="Request the change">
-    Click the circular arrows icon beside the IP, confirm the prompt, and the portal will queue the replacement address.
+    Click the circular arrows icon beside the IP, confirm the prompt, and the Control Panel will queue the replacement address.
   </Step>
 </Steps>
 
@@ -44,7 +44,7 @@ If the free window has passed, choose one of two add-ons:
 
 <CardGroup cols={2}>
   <Card title="📦 Standard change">
-    <p><strong>€5</strong> per request. The portal assigns the next available IPv4—perfect when you just need a fresh address.</p>
+    <p><strong>€5</strong> per request. The Control Panel assigns the next available IPv4—perfect when you just need a fresh address.</p>
     <CtaButton label="Order Standard Change" link="https://my.edbb.com/cart.php?gid=addons" openInNewTab={true} />
   </Card>
   <Card title="🎯 Bespoke change">
