--- a/faq/ip-addresses/ip-can-not-be-reached-from-my-country.mdx
+++ b/faq/ip-addresses/ip-can-not-be-reached-from-my-country.mdx
@@ -32,7 +32,7 @@ Within the first 24 hours of provisioning, EDBB will swap the primary IPv4 once 
 
 - Contact Support via the messenger or email with your VPS identifier.  
 - Attach the reachability tests showing where the IP is blocked.  
-- Once approved, the portal replaces the address—reinstall the VPS or apply the new configuration manually so services resume.
+- Once approved, the Control Panel replaces the address—reinstall the VPS or apply the new configuration manually so services resume.
 
 <CtaButton label="How to Change IP" link="./change-ip-address" />
 
