--- a/faq/ip-addresses/setting-up-reverse-pointers.mdx
+++ b/faq/ip-addresses/setting-up-reverse-pointers.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Configure Reverse DNS (PTR)"
 sidebarTitle: "Reverse DNS"
-description: "Set or remove PTR records for your EDBB VPS IPv4/IPv6 directly in the management portal."
+description: "Set or remove PTR records for your EDBB VPS IPv4/IPv6 directly in the Control Panel."
 ---
 
 ## Prep Checklist
@@ -14,11 +14,11 @@ description: "Set or remove PTR records for your EDBB VPS IPv4/IPv6 directly in 
 
 - 📌 Have the exact FQDN you want to publish (for example `mail.example.com`).  
 - 🧾 Keep both IPv4 and IPv6 assignments handy—the Network tab lists them.  
-- 🔒 Plan to use lowercase hostnames without trailing dots; the portal formats PTRs automatically.
+- 🔒 Plan to use lowercase hostnames without trailing dots; the Control Panel formats PTRs automatically.
 
 ---
 
-## Update PTR Records in the Portal
+## Update PTR Records in the Control Panel
 
 <Steps>
   <Step title="Open the rDNS panel">
