--- a/faq/ip-addresses/understanding-dns-systems.mdx
+++ b/faq/ip-addresses/understanding-dns-systems.mdx
@@ -14,4 +14,4 @@ Default resolvers on EDBB images point to Cloudflare (1.1.1.1 / 1.0.0.1).  \n+An
 
 ## Customizing Settings
 
-You’re free to override resolver choices inside the VPS if you require alternative services or internal DNS.  \n+PTR records, however, remain managed through the EDBB portal to ensure consistency across all allocations.
+You’re free to override resolver choices inside the VPS if you require alternative services or internal DNS.  \n+PTR records, however, remain managed through the EDBB Control Panel to ensure consistency across all allocations.
