--- a/faq/traffic-bandwidth/exceeding-monthly-included-traffic.mdx
+++ b/faq/traffic-bandwidth/exceeding-monthly-included-traffic.mdx
@@ -30,6 +30,6 @@ description: "When your VPS hits 100% of its traffic allocation, throughput is t
 
 ## Stay Ahead of the Curve
 
-- Monitor usage on the **Traffic** tab in the portal—graphs show both consumption and remaining pool balance.  
+- Monitor usage on the **Traffic** tab in the Control Panel—graphs show both consumption and remaining pool balance.  
 - Set calendar reminders around high-usage campaigns so you can assign extra traffic proactively.  
 - Combine with off-peak batch jobs or CDN caching to stretch your allowance further.
