--- a/faq/traffic-bandwidth/traffic-vs-bandwidth.mdx
+++ b/faq/traffic-bandwidth/traffic-vs-bandwidth.mdx
@@ -37,4 +37,4 @@ Imagine a highway:
 - **Traffic** is how many cars actually drove down that highway this month.  
 - You can burst to the full lane capacity, but the total number of cars still counts toward your traffic allowance.
 
-Track both metrics in the EDBB portal under the **Traffic** tab; it shows current throughput and period-to-date usage side by side.
+Track both metrics in the EDBB Control Panel under the **Traffic** tab; it shows current throughput and period-to-date usage side by side.
