--- a/faq/upgrades-downgrades/cpu-cores-vs-cpu-sockets-in-vps-environments/understanding-cpu-cores-vs-sockets-in-vps.mdx
+++ b/faq/upgrades-downgrades/cpu-cores-vs-cpu-sockets-in-vps-environments/understanding-cpu-cores-vs-sockets-in-vps.mdx
@@ -1,7 +1,7 @@
 ---
 title: "CPU Cores vs Sockets in an EDBB VPS"
 sidebarTitle: "Cores vs Sockets"
-description: "Understand how vCPUs are mapped to sockets and cores, why it matters for licensing/performance, and how to change the topology in the portal." 
+description: "Understand how vCPUs are mapped to sockets and cores, why it matters for licensing/performance, and how to change the topology in the Control Panel." 
 ---
 
 ## Core vs Socket Basics
@@ -33,7 +33,7 @@ description: "Understand how vCPUs are mapped to sockets and cores, why it matte
     In the EDBB control panel, open your VPS and switch to the <strong>Settings</strong> tab. Locate the <strong>CPU Cores vs Sockets</strong> control.
   </Step>
   <Step title="Pick the layout">
-    Choose whether you want <strong>multiple sockets</strong> or <strong>multiple cores</strong>. The portal automatically maps your vCPU allotment to the selected layout.
+    Choose whether you want <strong>multiple sockets</strong> or <strong>multiple cores</strong>. The Control Panel automatically maps your vCPU allotment to the selected layout.
   </Step>
   <Step title="Apply and reboot">
     Click <strong>Apply</strong>, then power-cycle or reboot the VPS so the guest OS detects the new topology cleanly.
