--- a/faq/upgrades-downgrades/upgrade-disk-drive-boost.mdx
+++ b/faq/upgrades-downgrades/upgrade-disk-drive-boost.mdx
@@ -25,7 +25,7 @@ import { CtaButton } from "/snippets/cta-button.mdx";
 
 ---
 
-## Order the Boost Through the Portal
+## Order the Boost Through the Control Panel
 
 <Steps>
   <Step title="Open the service">
