--- a/faq/upgrades-downgrades/upgrade-plan.mdx
+++ b/faq/upgrades-downgrades/upgrade-plan.mdx
@@ -58,7 +58,7 @@ Need to compare plan details first? Use the dedicated Upgrade tab.
     Press the blue <strong>Upgrade Plan</strong> button. This loads the comparison page that lists each higher tier with resource details.
   </Step>
   <Step title="Review and checkout">
-    Compare CPU, RAM, storage, and traffic quotas. Select your target plan, pay the prorated invoice, and the portal handles the rest.
+    Compare CPU, RAM, storage, and traffic quotas. Select your target plan, pay the prorated invoice, and the Control Panel handles the rest.
   </Step>
 </Steps>
 
