--- a/faq/what-is-a-kvm-vps.mdx
+++ b/faq/what-is-a-kvm-vps.mdx
@@ -21,7 +21,7 @@ import { CtaButton } from "/snippets/cta-button.mdx";
     Guests see modern CPU extensions (AES-NI, AVX2, etc.) for encryption and compute-heavy workloads.
   </Card>
   <Card title="🧰 Bring Your Own OS">
-    Boot Linux, BSD, or Windows images—or upload custom ISOs and qcow2 snapshots directly in the portal.
+    Boot Linux, BSD, or Windows images—or upload custom ISOs and qcow2 snapshots directly in the Control Panel.
   </Card>
   <Card title="🔗 Advanced Networking">
     Create TUN/TAP interfaces, attach additional NICs, or place VPSs on private VLANs.
@@ -56,7 +56,7 @@ import { CtaButton } from "/snippets/cta-button.mdx";
 Yes. With CPU passthrough and Virtio drivers, performance is near-native while disk and network remain virtualized for flexibility.
 
 **Can I install any OS?**  
-Upload your ISO or qcow2 image and mount it from the portal. You can also use EDBB’s library of Linux and Windows templates.
+Upload your ISO or qcow2 image and mount it from the Control Panel. You can also use EDBB’s library of Linux and Windows templates.
 
 **Does it support VPN protocols?**  
 Absolutely—TUN/TAP interfaces are available for OpenVPN, WireGuard, IPsec, and other tunneling solutions.
@@ -64,6 +64,6 @@ Absolutely—TUN/TAP interfaces are available for OpenVPN, WireGuard, IPsec, and
 **Can I run hosting control panels?**  
 Yes. Plesk, cPanel, DirectAdmin, or any similar stack functions normally on a KVM VPS.
 
-KVM gives you the control of a dedicated server with the convenience of EDBB’s portal and automation tools.
+KVM gives you the control of a dedicated server with the convenience of EDBB’s Control Panel and automation tools.
 
-<CtaButton label="Explore the VPS Control Center" link="/vps-management/vps-management-portal" />
+<CtaButton label="Explore the VPS Control Center" link="/vps-management/vps-control-panel" />
