--- a/getting-started/QQQQ_check-your-inbox.mdx
+++ b/getting-started/QQQQ_check-your-inbox.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Check Your Inbox ✉️"
 sidebarTitle: "Check Your Inbox"
-description: "Watch for the welcome email from EDBB—it contains portal access, IP details, and quick links for launching your VPS."
+description: "Watch for the welcome email from EDBB—it contains Control Panel access, IP details, and quick links for launching your VPS."
 ---
 
 ## You're Almost Ready! 🚀
@@ -10,7 +10,7 @@ Thank you for choosing **EDBB**. The next step is simply to watch for our welcom
 
 ### What to Expect in the Welcome Email
 
-1. **Portal Access** – Your login credentials for the [EDBB VPS Portal](https://my.edbb.com/clientarea.php).
+1. **Control Panel Access** – Your login credentials for the [EDBB VPS Control Panel](https://my.edbb.com/clientarea.php).
 2. **Server Details** – Assigned IPv4 and IPv6 addresses for your VPS.
 3. **Key Resources** – Quick links to the [knowledge base](https://docs.edbb.com) and [Acceptable Use Policy](https://docs.edbb.com/acceptable-use-policy).
 4. **Status Updates** – Information on how to subscribe to maintenance and incident notifications via the [status page](https://status.edbb.com).
@@ -22,7 +22,7 @@ Check your spam folder and whitelist `support@edbb.com`. If nothing arrives with
 
 ### Bookmark These Links
 
-- [EDBB VPS Portal](https://my.edbb.com/clientarea.php) – Manage services, invoices, and chat with Support in the messenger.
+- [EDBB VPS Control Panel](https://my.edbb.com/clientarea.php) – Manage services, invoices, and chat with Support in the messenger.
 - [Knowledge Base](https://docs.edbb.com) – Step-by-step guides and troubleshooting tips.
 - [Status Page](https://status.edbb.com) – Subscribe for real-time maintenance and incident alerts.
 
