--- a/how-our-support-team-helps-you.mdx
+++ b/how-our-support-team-helps-you.mdx
@@ -13,7 +13,7 @@ description: "Understand how EDBB Support assists with billing, troubleshooting 
 ## What We Handle (and How)
 
 - 💬 **Billing & Accounts** – Questions about invoices, payments, or account management. We’ve got you covered.
-- 🧭 **Portal Coaching** – We walk you through traffic pool, rDNS updates, snapshots, reinstalls, and all other control panel features.
+- 🧭 **Control Panel Coaching** – We walk you through traffic pool, rDNS updates, snapshots, reinstalls, and all other control panel features.
 - 🩺 **Troubleshooting Guidance** – We help diagnose common issues and point you to the right resources for troubleshooting.
 - 🚨 **Escalations** – We ensure you’re connected with the right experts when something needs deeper inspection.
 
