--- a/linux-secure-shell-ssh.mdx
+++ b/linux-secure-shell-ssh.mdx
@@ -41,7 +41,7 @@ import { CtaButton } from "/snippets/cta-button.mdx";
     On the first login, type <code>yes</code> to store the host key so future sessions can verify the server’s identity.
   </Step>
   <Step title="Enter your password or unlock your key">
-    Provide the welcome-password (or the credential you set in the portal). A successful authentication drops you into the remote shell.
+    Provide the welcome-password (or the credential you set in the Control Panel during reinstallation). A successful authentication drops you into the remote shell.
   </Step>
 </Steps>
 
