--- a/vps-management/autoinstall-reinstall-install-vps-linux-windows.mdx
+++ b/vps-management/autoinstall-reinstall-install-vps-linux-windows.mdx
@@ -24,7 +24,7 @@ import { CtaButton } from "/snippets/cta-button.mdx";
   </Step>
   <Step title="Switch to Installation tab → Select Automated Installers">
     Use the <strong>Installation</strong>
-     tab on the service dashboard, then stay on the default <strong>Automated Installers</strong>
+     tab on the service Control Panel, then stay on the default <strong>Automated Installers</strong>
      view.
 
     <div style={{ marginTop:"16px" }}>
@@ -50,7 +50,7 @@ import { CtaButton } from "/snippets/cta-button.mdx";
   </Step>
   <Step title="Set password and launch">
     Enter a password (or paste an SSH public key) and click <strong>Start the installation.</strong>
-     Our dashboard initiates the installation.
+     Our Control Panel initiates the installation.
 
     We do not send a new Welcome Email when you reinstall! The password you specify during installation will be your new root (Linux) or Windows Administrator password.
   </Step>
