--- a/vps-management/bring-your-own-iso.mdx
+++ b/vps-management/bring-your-own-iso.mdx
@@ -43,7 +43,7 @@ description: "EDBB lets you mount your own ISO images—install custom OS builds
     Select <strong>Download ISO</strong>, paste the direct link (for example, <code>https://cdn.example.com/os/custom.iso</code>), and confirm.
   </Step>
   <Step title="Wait for the transfer">
-    The portal downloads the file into your account. Leave the page open until the status changes to <strong>Ready</strong>.
+    The Control Panel downloads the file into your account. Leave the page open until the status changes to <strong>Ready</strong>.
     <div style={{marginTop: "16px"}}>
       <img src="/assets/vps-mount-iso-co.png" alt="Custom ISO download in the Installation tab" style={{width: "100%", maxWidth: "820px", borderRadius: "16px", border: "1px solid rgba(0,0,0,0.08)"}} />
     </div>
