--- a/vps-management/cloud-init-vps-installation.mdx
+++ b/vps-management/cloud-init-vps-installation.mdx
@@ -48,7 +48,7 @@ Cloud-Init is a lightweight framework baked into many Linux templates. On first 
     Choose the <strong>Custom Image</strong> sub-tab to reveal the Cloud-Init upload interface.
   </Step>
   <Step title="Upload the qcow2 file">
-    Drag & drop your qcow2 (or click <em>browse</em>). The portal stores the image temporarily for this reinstall.
+    Drag & drop your qcow2 (or click <em>browse</em>). The Control Panel stores the image temporarily for this reinstall.
     <div style={{marginTop: "16px"}}>
       <img src="/assets/vps-upload-iso.png" alt="Upload custom Cloud-Init image" style={{width: "100%", maxWidth: "820px", borderRadius: "16px", border: "1px solid rgba(0,0,0,0.08)"}} />
     </div>
