--- a/vps-management/enable-vnc-server.mdx
+++ b/vps-management/enable-vnc-server.mdx
@@ -15,7 +15,7 @@ description: "Turn VNC on or off from the EDBB Control Panel so you can reach th
 ## What You’ll Need
 
 <CardGroup cols={3}>
-  <Card title="🔐 Portal Access">
+  <Card title="🔐 Control Panel Access">
     Sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB Control Panel</a> and open the VPS you want to manage.
   </Card>
   <Card title="🕒 Maintenance Window">
