--- a/vps-management/how-to-change-ip-address-in-windows-server.mdx
+++ b/vps-management/how-to-change-ip-address-in-windows-server.mdx
@@ -7,7 +7,7 @@ description: "Collect the new IPv4 details from the Network tab, change them in 
 ## Change the IPv4 Address in Windows Server
 
 <Info>
-  Before editing Windows networking, note the IPv4 address, subnet, gateway, and DNS values from the EDBB portal. Changing settings interrupts connectivity—plan a brief maintenance window.
+  Before editing Windows networking, note the IPv4 address, subnet, gateway, and DNS values from the EDBB Control Panel. Changing settings interrupts connectivity—plan a brief maintenance window.
 </Info>
 
 ---
@@ -44,7 +44,7 @@ description: "Collect the new IPv4 details from the Network tab, change them in 
 ## Step 4 – Enter the New IPv4 Values
 
 1. Highlight **Internet Protocol Version 4 (TCP/IPv4)** and click **Properties**.  
-2. Select **Use the following IP address** and input the data from the portal (IP, subnet mask, default gateway).  
+2. Select **Use the following IP address** and input the data from the Control Panel (IP, subnet mask, default gateway).  
 3. If DNS servers are listed, choose **Use the following DNS server addresses** and add them.
 
 ![Windows IPv4 Properties](/assets/1sSq3fI0sZJj8Zc4RoSr4-7e4qsQlMtqcneRYQoPZQp-20241106-143711.png)
