--- a/vps-management/mount-iso-image.mdx
+++ b/vps-management/mount-iso-image.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Mount an ISO Image"
 sidebarTitle: "Mount ISO"
-description: "Load recovery tools or custom installers by mounting an ISO directly from the EDBB portal."
+description: "Load recovery tools or custom installers by mounting an ISO directly from the EDBB Control Panel."
 ---
 
 ## Mount ISO Images from the Control Panel
@@ -15,8 +15,8 @@ description: "Load recovery tools or custom installers by mounting an ISO direct
 ## Before You Start
 
 <CardGroup cols={3}>
-  <Card title="🔐 Portal Access">
-    Confirm you can sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB Control Panel</a> and open the service dashboard.
+  <Card title="🔐 Control Panel Access">
+    Confirm you can sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB Control Panel</a> and open the service Control Panel.
   </Card>
   <Card title="🕒 Maintenance Window">
     Plan a short outage—the VPS restarts when the ISO is attached.
