--- a/vps-management/power-cycle-or-reboot-a-vps.mdx
+++ b/vps-management/power-cycle-or-reboot-a-vps.mdx
@@ -1,11 +1,11 @@
 ---
 title: "Power Cycle or Reboot a VPS"
 sidebarTitle: "Reboot VPS"
-description: "Control VPS power states from the EDBB portal—restart, stop, or start with a couple of clicks."
+description: "Control VPS power states from the EDBB Control Panel—restart, stop, or start with a couple of clicks."
 ---
 
 <Note>
-  Prefer graceful reboots whenever possible: run <code>sudo shutdown -h now</code> or <code>sudo halt</code> inside Linux (or the equivalent command in Windows), then start the VPS from the portal. This keeps filesystems and services healthy before you resort to a forced power cycle.
+  Prefer graceful reboots whenever possible: run <code>sudo shutdown -h now</code> or <code>sudo halt</code> inside Linux (or the equivalent command in Windows), then start the VPS from the Control Panel. This keeps filesystems and services healthy before you resort to a forced power cycle.
 </Note>
 
 ## Restart a Running VPS
