--- a/vps-management/reset-root-password-linux.mdx
+++ b/vps-management/reset-root-password-linux.mdx
@@ -15,11 +15,11 @@ description: "Use the EDBB password-helper ISO to reset your Linux root password
 ## Before You Start
 
 <CardGroup cols={3}>
-  <Card title="🔐 Portal Access Ready">
+  <Card title="🔐 Control Panel Access Ready">
     Confirm you can sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank">
     EDBB Control Panel</a>
 
-    . All steps happen from the service dashboard.
+    . All steps happen from the service Control Panel.
   </Card>
   <Card title="💾 Safe Maintenance Window">
     Plan a brief outage. The VPS reboots twice—once to load the helper ISO, once to return to disk.
