--- a/vps-management/reset-windows-admin-password.mdx
+++ b/vps-management/reset-windows-admin-password.mdx
@@ -15,8 +15,8 @@ description: "Boot the Windows password-helper ISO, clear the Administrator pass
 ## Before You Begin
 
 <CardGroup cols={3}>
-  <Card title="🔐 Portal Access">
-    Confirm you can sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB Control Panel</a>. You’ll manage the entire workflow from the service dashboard.
+  <Card title="🔐 Control Panel Access">
+    Confirm you can sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB Control Panel</a>. You’ll manage the entire workflow from the service Control Panel.
   </Card>
   <Card title="🕒 Restart Window">
     Allow a short maintenance window—the VPS reboots once into the helper ISO and once back into Windows.
