--- a/vps-management/system-configuration-dialog.mdx
+++ b/vps-management/system-configuration-dialog.mdx
@@ -15,7 +15,7 @@ description: "Tune CPU, boot, storage, network, and display settings for your ED
 ## Accessing the Dialog
 
 <Steps>
-  <Step title="Open the service dashboard">
+  <Step title="Open the service Control Panel">
     Sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB Control Panel</a>, open <strong>Services</strong>, and select the VPS you want to adjust.
   </Step>
   <Step title="Launch System Configuration">
