--- a/vps-management/vps-control-panel.mdx
+++ b/vps-management/vps-control-panel.mdx
@@ -34,7 +34,7 @@ while a quick-action column on the left keeps power and console controls only on
 
 ---
 
-## Dashboard Highlights
+## Control Panel Highlights
 
 <CardGroup cols={2}>
   <Card title="📋 Service Summary">
@@ -56,7 +56,7 @@ while a quick-action column on the left keeps power and console controls only on
 
 <CardGroup cols={2}>
   <Card title="🛠️ Fast Maintenance">
-    Shortcut buttons for <strong>Reinstall</strong> and <strong>IP Change</strong> now sit beneath the dashboard cards. Use them to reinstall your OS or initiate random or bespoke IP address changes.
+    Shortcut buttons for <strong>Reinstall</strong> and <strong>IP Change</strong> now sit beneath the Control Panel cards. Use them to reinstall your OS or initiate random or bespoke IP address changes.
 
   </Card>
   <Card title="⬆️ Upgrades & Cancellation">
