--- a/check-your-inbox.mdx
+++ b/check-your-inbox.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Check your Inbox ✉️"
 sidebarTitle: "Check your Inbox"
-description: "Get started with EDBB VPS hosting. Check your inbox for login details, server IP addresses, and access to the management portal to set up your Virtual Private Server quickly and easily."
+description: "Get started with EDBB VPS hosting. Check your inbox for login details, server IP addresses, and access to the Control Panel to set up your Virtual Private Server quickly and easily."
 ---
 
 import { CtaButton } from "/snippets/cta-button.mdx";
