--- a/vps-management/ip-address-information.mdx
+++ b/vps-management/ip-address-information.mdx
@@ -1,7 +1,7 @@
 ---
 title: "VPS IP Address Settings & Network Info"
 sidebarTitle: "VPS IP Settings"
-description: "Find IPv4, IPv6, gateway, and DNS details for your VPS on the Network tab of the EDBB portal."
+description: "Find IPv4, IPv6, gateway, and DNS details for your VPS on the Network tab of the EDBB Control Panel."
 ---
 
 ## Network Tab Overview
