--- a/vps-management/ipv6-configuration.mdx
+++ b/vps-management/ipv6-configuration.mdx
@@ -33,7 +33,7 @@ description: "Find your IPv6 range and gateway in the Network tab, then add addr
 # Pick an address from your /64 equivalent
 sudo ip -6 addr add 2a03:f80:ed15:82ca::10/48 dev eth0
 
-# Add the default route using the gateway from the portal
+# Add the default route using the gateway from the Control Panel
 sudo ip -6 route add default via 2a03:f80:ed15::1
 ```
 
