--- a/faq/ip-addresses/change-ip-address.mdx
+++ b/faq/ip-addresses/change-ip-address.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Change Your VPS IPv4"
+title: "Change Your VPS IP Address"
 sidebarTitle: "Change IP"
 description: "Swap the primary IPv4 on your EDBB VPS for free within 24 hours, or purchase a standard or bespoke change later on."
 ---
@@ -10,45 +10,62 @@ import { CtaButton } from "/snippets/cta-button.mdx";
   You can refresh the primary IPv4 once per VPS for free within the first 24 hours. After that window, order a standard or bespoke change directly inside the EDBB Control Panel.
 </Info>
 
-## Free Change Within 24 Hours
+## Free IP Change
 
-Every new VPS includes a one-time IP change at no cost during the first 24 hours.
+Every new VPS includes a one-time IP change at no cost during the first 24 hours from the delivery of your VPS.
 
 <Steps>
   <Step title="Open the EDBB Control Panel">
-    Sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank" rel="noreferrer">EDBB Control Panel</a> and pick the VPS from <strong>Services → My Products</strong>.
+    Sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank" rel="noreferrer">
+    EDBB Control Panel</a>
+
+     and pick the VPS from <strong>Services → My Products</strong>
+    .
   </Step>
   <Step title="Stay on the Control Panel tab">
-    The summary card on the right lists <strong>Primary IPv4</strong> with copy and refresh icons. This is where the free swap is triggered.
+    The summary card on the right lists <strong>Primary IPv4</strong>
+     with copy and refresh icons. This is where the free swap is triggered.
   </Step>
   <Step title="Request the change">
     Click the circular arrows icon beside the IP, confirm the prompt, and the Control Panel will queue the replacement address.
   </Step>
 </Steps>
 
-<div style={{marginTop: "16px"}}>
-  <img src="/assets/vps-change-ip-recycle-symbol.png" alt="Recycle icon for requesting a free IP change" style={{width: "100%", maxWidth: "420px", borderRadius: "16px", border: "1px solid rgba(0,0,0,0.08)"}} />
+<div style={{ marginTop:"16px" }}>
+<img
+  src="/assets/vps-change-ip-recycle-symbol.png"
+  alt="Recycle icon for requesting a free IP change"
+  style={{ width:"100%",maxWidth:"420px",borderRadius:"16px",border:"1px solid rgba(0,0,0,0.08)" }}
+/>
+
 </div>
 
-<Callout type="info">
-  If the refresh icon is greyed out or missing, the complimentary swap has been used—scroll down to the <strong>IP Change</strong> button at the bottom of the page to order a paid change instead.
-</Callout>
+<info>
+  If the refresh icon is greyed out or missing, the complimentary swap has been used—scroll down to the <strong>IP Change</strong>
+   button at the bottom of the page to order a paid change instead.
+</info>
 
 Once processed, reinstall the VPS or configure the new address manually—the previous IP stops responding immediately.
 
 ---
 
-## Paid Changes After 24 Hours
+## Paid IP Change After 24 Hours
 
 If the free window has passed, choose one of two add-ons:
 
 <CardGroup cols={2}>
   <Card title="📦 Standard change">
-    <p><strong>€5</strong> per request. The Control Panel assigns the next available IPv4—perfect when you just need a fresh address.</p>
+    <p>
+    <strong>€5</strong>
+     per request. The Control Panel assigns the next available IPv4—perfect when you just need a fresh address.</p>
+
     <CtaButton label="Order Standard Change" link="https://my.edbb.com/cart.php?gid=addons" openInNewTab={true} />
   </Card>
   <Card title="🎯 Bespoke change">
-    <p><strong>€10</strong> with a curated list of candidates so you can choose the exact IPv4 that fits your compliance or geolocation requirements.</p>
+    <p>
+    <strong>€10</strong>
+     with a curated list of candidates so you can choose the exact IPv4 that fits your compliance or geolocation requirements.</p>
+
     <CtaButton label="Order Bespoke Change" link="https://my.edbb.com/cart.php?gid=addons" openInNewTab={true} />
   </Card>
 </CardGroup>
@@ -59,8 +76,9 @@ If the free window has passed, choose one of two add-ons:
 
 After the change completes:
 
-- Reinstall the VPS, **or**  
+- Reinstall the VPS, **or**
 - Configure the new IPv4 through the console or operating system tools.
 
 <CtaButton label="(Re)install OS" link="../../vps-management/autoinstall-reinstall-install-vps-linux-windows" />
+
 <CtaButton label="Enable VNC" link="../../vps-management/enable-vnc-server" />
