Documentation edits made through Mintlify web editor

--- a/faq/ip-addresses/change-ip-address.mdx
+++ b/faq/ip-addresses/change-ip-address.mdx
@@ -17,14 +17,10 @@ Every new VPS includes a one-time IP change at no cost during the first 24 hours
 <Steps>
   <Step title="Open the EDBB Control Panel">
     Sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank" rel="noreferrer">
-    EDBB Control Panel</a>
-
-     and pick the VPS from <strong>Services → My Products</strong>
-    .
+    EDBB Control Panel</a> and pick the VPS from <strong>Services → My Products</strong>.
   </Step>
   <Step title="Stay on the Control Panel tab">
-    The summary card on the right lists <strong>Primary IPv4</strong>
-     with copy and refresh icons. This is where the free swap is triggered.
+    The summary card on the right lists <strong>Primary IPv4</strong> with copy and refresh icons. This is where the free swap is triggered.
   </Step>
   <Step title="Request the change">
     Click the circular arrows icon beside the IP, confirm the prompt, and the Control Panel will queue the replacement address.
@@ -37,13 +33,11 @@ Every new VPS includes a one-time IP change at no cost during the first 24 hours
   alt="Recycle icon for requesting a free IP change"
   style={{ width:"100%",maxWidth:"420px",borderRadius:"16px",border:"1px solid rgba(0,0,0,0.08)" }}
 />
-
 </div>
 
-<info>
-  If the refresh icon is greyed out or missing, the complimentary swap has been used—scroll down to the <strong>IP Change</strong>
-   button at the bottom of the page to order a paid change instead.
-</info>
+<Info>
+  If the refresh icon is greyed out or missing, the complimentary swap has been used—scroll down to the <strong>IP Change</strong> button at the bottom of the page to order a paid change instead.
+</Info>
 
 Once processed, reinstall the VPS or configure the new address manually—the previous IP stops responding immediately.
 
@@ -56,15 +50,15 @@ If the free window has passed, choose one of two add-ons:
 <CardGroup cols={2}>
   <Card title="📦 Standard change">
     <p>
-    <strong>€5</strong>
-     per request. The Control Panel assigns the next available IPv4—perfect when you just need a fresh address.</p>
+    <strong>€5</strong> per request. The Control Panel assigns the next available IPv4—perfect when you just need a fresh address.
+    </p>
 
     <CtaButton label="Order Standard Change" link="https://my.edbb.com/cart.php?gid=addons" openInNewTab={true} />
   </Card>
   <Card title="🎯 Bespoke change">
     <p>
-    <strong>€10</strong>
-     with a curated list of candidates so you can choose the exact IPv4 that fits your compliance or geolocation requirements.</p>
+    <strong>€10</strong> with a curated list of candidates so you can choose the exact IPv4 that fits your compliance or geolocation requirements.
+    </p>
 
     <CtaButton label="Order Bespoke Change" link="https://my.edbb.com/cart.php?gid=addons" openInNewTab={true} />
   </Card>
@@ -72,7 +66,7 @@ If the free window has passed, choose one of two add-ons:
 
 ---
 
-## Don’t Forget to Apply the New IP
+## Don't Forget to Apply the New IP
 
 After the change completes:
 
